--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
-@import '@alifd/theme-design-pro/variables.css';
-@import '@alifd/theme-design-pro/dist/next.var.css';
-
+/* @import '@alifd/theme-design-pro/variables.css';
+@import '@alifd/theme-design-pro/dist/next.var.css'; */
+@import '@alifd/theme-20335/variables.css';
+@import '@alifd/theme-20335/dist/next.var.css';
 body {
   -webkit-font-smoothing: antialiased;
 }
